project sass enabled

--- a/angular.json
+++ b/angular.json
@@ -145,5 +145,10 @@
       }
     }
   },
-  "defaultProject": "leadreader"
+  "defaultProject": "leadreader",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
